# wwise-originals-relocator

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: portable.yml
docs/: portable-gui.html  usage-guide.html
packaging/: portable_entry.py  wwise-relocator.spec
scripts/: build-portable.ps1  build-portable.sh  check-perforce-connection.ps1  prepare_portable.py
src/wwise_p4_source_relocator/: __init__.py  applier.py  cli.py  file_ops.py  models.py  operation_lock.py  p4_client.py  pilot_project.py  planner.py  preflight.py  project_paths.py  readiness.py  report.py  rollback.py  validator.py  waapi_reader.py  waapi_transport.py  wwise_xml.py
src/wwise_p4_source_relocator/gui/: __init__.py  app.py  bridge.py  service.py
src/wwise_p4_source_relocator/gui/assets/: app.js  index.html  styles.css
tests/: test_apply_rollback.py  test_cli_exit.py  test_gui_app.py  test_gui_assets.py  test_gui_service.py  test_live_p4_server.py  test_live_waapi_server.py  test_local_apply.py  test_p4_client.py  test_pilot_project.py  test_planner.py  test_portable_package.py  test_preflight.py  test_readiness.py  test_report.py  test_waapi_reader.py  test_waapi_transport.py  test_wwu_parser.py  test_wwu_patch.py
tests/fixtures/sample_project/Actor-Mixer Hierarchy/: Default Work Unit.wwu
