[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wwise-p4-source-relocator"
version = "0.1.0"
description = "Perforce-aware relocation of Wwise Originals WAV sources"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Wwise P4 Source Relocator contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
waapi = ["waapi-client"]
gui = ["pywebview>=6.2,<7", "waapi-client"]
portable = ["pywebview>=6.2,<7", "waapi-client", "pyinstaller>=6,<7"]

[project.scripts]
wwise-p4-source-relocator = "wwise_p4_source_relocator.cli:main"
wwise-p4-source-relocator-gui = "wwise_p4_source_relocator.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"wwise_p4_source_relocator.gui" = ["assets/*.html", "assets/*.css", "assets/*.js"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
