[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wwise-p4-source-relocator"
dynamic = ["version"]
description = "Perforce-aware relocation of Wwise Originals WAV sources"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Wwise P4 Source Relocator contributors" }]
dependencies = ["defusedxml==0.7.1"]

[project.optional-dependencies]
dev = ["bandit==1.9.4", "pip-audit==2.10.1", "pytest==9.1.1"]
waapi = ["waapi-client==0.8.1"]
gui = ["pywebview==6.2.1", "waapi-client==0.8.1"]
portable = [
    "pywebview==6.2.1",
    "waapi-client==0.8.1",
    "pyinstaller==6.21.0",
]

[project.scripts]
wwise-p4-source-relocator = "wwise_p4_source_relocator.cli:main"
wwise-p4-source-relocator-gui = "wwise_p4_source_relocator.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "wwise_p4_source_relocator.__version__" }

[tool.setuptools.package-data]
"wwise_p4_source_relocator.gui" = ["assets/*.html", "assets/*.css", "assets/*.js"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
